# Robot_arm

./: CMakeLists.txt  CmakeNote.md  readme.md  test_fk.py
include/myrobot/: arm_bind.h  utils.h
script/: follow.py  get_angle.py  text_.py  text_ik.py
src/: arm.cpp  arm_bind.cpp  get_angle.cpp  my_arm_bind.cpp  tiaoshi.md  utils.cpp  项目.md
